--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -68,46 +68,46 @@
 %%% Údaje o práci
 
 % Název práce v jazyce práce (přesně podle zadání)
-\def\NazevPrace{Název práce}
+\def\NazevPrace{Aplikace pro správu výukových kurzů}
 
 % Název práce v angličtině
-\def\NazevPraceEN{Name of thesis}
+\def\NazevPraceEN{Application for Educational Courses Management}
 
 % Jméno autora
-\def\AutorPrace{Jméno Příjmení}
+\def\AutorPrace{Vojtěch Lengál}
 
 % Rok odevzdání
-\def\RokOdevzdani{ROK}
+\def\RokOdevzdani{2021}
 
 % Název katedry nebo ústavu, kde byla práce oficiálně zadána
 % (dle Organizační struktury MFF UK, případně plný název pracoviště mimo MFF)
-\def\Katedra{Název katedry nebo ústavu}
-\def\KatedraEN{Name of the department}
+\def\Katedra{Katedra distribuovaných a spolehlivých systémů}
+\def\KatedraEN{Department of Distributed and Dependable Systems}
 
 % Jedná se o katedru (department) nebo o ústav (institute)?
 \def\TypPracoviste{Katedra}
 \def\TypPracovisteEN{Department}
 
 % Vedoucí práce: Jméno a příjmení s~tituly
-\def\Vedouci{Vedoucí práce}
+\def\Vedouci{doc. RNDr. Jan Kofroň, Ph.D.}
 
 % Pracoviště vedoucího (opět dle Organizační struktury MFF)
-\def\KatedraVedouciho{katedra}
-\def\KatedraVedoucihoEN{department}
+\def\KatedraVedouciho{Katedra distribuovaných a spolehlivých systémů}
+\def\KatedraVedoucihoEN{Department of Distributed and Dependable Systems}
 
 % Studijní program a obor
-\def\StudijniProgram{studijní program}
-\def\StudijniObor{studijní obor}
+\def\StudijniProgram{Informatika}
+\def\StudijniObor{Softwarové a datové inženýrství}
 
 % Nepovinné poděkování (vedoucímu práce, konzultantovi, tomu, kdo
 % zapůjčil software, literaturu apod.)
 \def\Podekovani{%
-Poděkování.
+Tímto bych chtěl poděkovat vedoucímu práce doc. RNDr. Janu Kofroňovi, Ph.D. za jeho rady a připomínky.
 }
 
 % Abstrakt (doporučený rozsah cca 80-200 slov; nejedná se o zadání práce)
 \def\Abstrakt{%
-Abstrakt.
+Cílem práce je vytvořit webovou aplikaci pro správu různých typů výukových kurzů, jako například vysokoškolské přednášky a cvičení, předměty na základní či střední škole nebo také libovolný zájmový kurz. Program bude poskytovat rozhraní jak pro správce – učitele, tak pro uživatele – studenty. Bude umožňovat vytváření a správu kurzů. Správci kurzu budou moci měnit jeho obsah (přidávat, odebírat materiály, apod.) a zakládat nové úkoly a testy, které budou uživatelé následně vyplňovat. Otázky s nabídkou odpovědí bude systém vyhodnocovat automaticky, zbytek bude správce kurzu hodnotit ručně. Uživatel si pak bude moci v daném kurzu prohlédnout všechny známky, a také opravené testy a úkoly.
 }
 \def\AbstraktEN{%
 Abstract.
@@ -206,10 +206,6 @@ Abstract.
 %%% Obrázky v bakalářské práci
 %%% (pokud jich je malé množství, obvykle není třeba seznam uvádět)
 \listoffigures
-
-%%% Tabulky v bakalářské práci (opět nemusí být nutné uvádět)
-%%% U matematických prací může být lepší přemístit seznam tabulek na začátek práce.
-\listoftables
 
 %%% Použité zkratky v bakalářské práci (opět nemusí být nutné uvádět)
 %%% U matematických prací může být lepší přemístit seznam zkratek na začátek práce.
