--- a/doc/cs/uvod.tex
+++ b/doc/cs/uvod.tex
@@ -1,9 +1,9 @@
 \chapter{Úvod}
 
+IT technologie pomáhají v každodenním životě s jeho organizací a dají se využít ke zvýšení
+komfortu. Přehled informací o studiu, ať už se jedná o základní, střední, či vysokou školu, může výrazně ulehčit orientaci ve větším množství úkolů a studovaných předmětů.
 
-Cílem je vytvořit webovou aplikaci na správu různých typů výukových kurzů. Pod kurzem si můžeme představit např. přednášku/cvičení na vysoké škole nebo předmět na základní popř. střední škole. Studenti budou moci prostřednictvím tohoto systému odevzdávat a vypracovávat testy a úkoly, které jim následně správce kurzu opraví. 
-Aplikace bude ale také umožňovat vytvoření kurzů bez hodnocení (tzv. non-graded courses), ty mohou být vhodné např. pro různé zájmové kurzy, kde úkoly ani testy nedávají smysl. 
+Cílem práce je vytvořit webovou aplikaci pro správu různých typů výukových kurzů, jako například vysokoškolské přednášky a cvičení, předměty na základní či střední škole nebo také libovolný zájmový kurz. Program bude poskytovat rozhraní jak pro správce – učitele, tak pro uživatele – studenty. Bude umožňovat vytváření a správu kurzů. Správci kurzu budou moci měnit jeho obsah (přidávat, odebírat materiály, apod.) a zakládat nové úkoly a testy, které budou uživatelé následně vyplňovat. Otázky s nabídkou odpovědí bude systém vyhodnocovat automaticky, zbytek bude správce kurzu hodnotit ručně. Uživatel si pak bude moci v daném kurzu prohlédnout všechny známky, a také opravené testy a úkoly.
+
 Alternativy jsou např. aplikace Bakaláři a Moodle. Na rozdíl od těchto programů nebude výsledná aplikace tak úzce zaměřená pro školy (bude ji možné snadno použít i např. na jazykové, zájmové kurzy, apod.).
-Program plánuju vyvíjet jako open-source, zdrojový kód bude ve veřejném repozitáři na Githubu.
-
-(převzato ze specifikace ročníkové práce)
+Program je vyvíjen jako open-source, zdrojový kód se nachází ve veřejném repozitáři na Githubu.
