C# section + resources added

--- a/doc/cs/kap01.tex
+++ b/doc/cs/kap01.tex
@@ -2,13 +2,19 @@
 
 \chapter{Použité technologie}
 
-\section{Backend}
+\section{Serverová část}
 
 \subsection{Jazyk C\#}
-TODO: stručný popis
+C\# je objektově orientovaný, staticky typovaný programovací jazyk, vyvinutý firmou Microsoft.
+C\# podporuje koncepty zapouzdření, dědičnosti a polymorfismu. Programy v jazyce C\# běží na platformě .NET. 
+Při kompilaci je zdrojový kód nejprve zkompilován do mezikódu zvaného IL. 
+Po spuštění programu pak modul CLR, který je součástí platformy .NET, provede JIT (just-in-time) kompilaci IL kódu do strojových instrukcí počítače.
+Jazyk C\# lze využít k tvorbě konzolových aplikací, webových aplikací a stránek, formulářových aplikací ve Windows, softwaru pro mobilní zařízení, apod. \cite{CSharpDocs}
+
+Jazyk C\# využíváme v serverové části aplikace. Používáme platformu .NET Core verze 3.1 a jazyk C\# verze 8.0.
 
 \subsection{ASP .NET Core Web API}
-Pro backend aplikace
+Pro backend aplikace \cite{AspNetDocs}
 
 TODO: popis frameworku
 
@@ -22,9 +28,9 @@ Framework pro unit testy
 
 TODO: popis frameworku
 
-\section{Frontend}
+\section{Klientská část}
 
-\subsection{Jazyk Typescript}
+\subsection{Jazyk TypeScript}
 TODO: stručný popis
 
 \subsection{Angular}
