--- a/doc/cs/literatura.tex
+++ b/doc/cs/literatura.tex
@@ -9,11 +9,11 @@
 %%% a unsrt jsou standardní součástí latexových distribucí. Styl czplainnat
 %%% je dodáván s touto šablonou a bibTeX ho hledá v aktuálním adresáři.
 
-\bibliographystyle{czplainnat}    %% Autor (rok) s českými spojkami
+% \bibliographystyle{czplainnat}    %% Autor (rok) s českými spojkami
 % \bibliographystyle{plainnat}    %% Autor (rok) s anglickými spojkami
-% \bibliographystyle{unsrt}       %% [číslo]
+\bibliographystyle{unsrt}       %% [číslo]
 
-\renewcommand{\bibname}{Zdroje (zatím původní obsah šablony)}
+\renewcommand{\bibname}{Zdroje}
 
 %%% Vytvoření seznamu literatury. Pozor, pokud jste necitovali ani jednu
 %%% položku, seznam se automaticky vynechá.
