all resources added

--- a/doc/cs/literatura.bib
+++ b/doc/cs/literatura.bib
@@ -15,11 +15,66 @@
 @misc{CSharpDocs,
 	title = {{D}okumentace jazyka {C\#}},
 	howpublished = {\url{https://docs.microsoft.com/en-us/dotnet/csharp}},
-	note = "[Online; citováno 2021-07-14]"
+	note = "[Online; citováno 14.7.2021]"
 }
 
-@misc{AspNetDocs,
+@misc{AspNetCoreDocs,
 	title = {{D}okumentace frameworku {ASP .NET C}ore},
 	howpublished = {\url{https://docs.microsoft.com/en-us/aspnet/core}},
-	note = "[Online; citováno 2021-07-14]"
+	note = "[Online; citováno 14.7.2021]"
 }
+
+@misc{EfCoreDocs,
+	title = {{D}okumentace frameworku {E}ntity {F}ramework {C}ore},
+	howpublished = {\url{https://docs.microsoft.com/en-us/ef/core}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{EfCoreCliDocs,
+	title = {{D}okumentace nástroje {CLI} tools for {E}ntity {F}ramework {C}ore},
+	howpublished = {\url{https://docs.microsoft.com/en-us/ef/core/cli/dotnet}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{xUnitDocs,
+	title = {{D}okumentace knihovny x{U}nit},
+	howpublished = {\url{https://xunit.net/#documentation}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{AngularDocs,
+	title = {{D}okumentace frameworku {A}ngulat},
+	howpublished = {\url{https://angular.io/docs}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{TypescriptDocs,
+	title = {{D}okumentace jazyka {T}ype{S}cript},
+	howpublished = {\url{https://www.typescriptlang.org/docs}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{BootstrapDocs,
+	title = {{D}okumentace frameworku {B}ootstrap},
+	howpublished = {\url{https://getbootstrap.com/docs}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{SqlServerDocs,
+	title = {{D}okumentace databáze {SQL S}erver},
+	howpublished = {\url{https://docs.microsoft.com/en-us/sql/sql-server}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{GitDocs,
+	title = {{D}okumentace nástroje {G}it{H}ub {A}ctions},
+	howpublished = {\url{https://docs.github.com/en/actions}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
+@misc{GitHubActionsDocs,
+	title = {{D}okumentace nástroje {G}it},
+	howpublished = {\url{https://git-scm.com/doc}},
+	note = "[Online; citováno 14.7.2021]"
+}
+
