--- a/doc/cs/literatura.bib
+++ b/doc/cs/literatura.bib
@@ -37,7 +37,7 @@
 }
 
 @misc{xUnitDocs,
-	title = {{D}okumentace knihovny x{U}nit},
+	title = {{D}okumentace frameworku x{U}nit.net},
 	howpublished = {\url{https://xunit.net/#documentation}},
 	note = "[Online; citováno 14.7.2021]"
 }
