--- a/doc/cs/literatura.bib
+++ b/doc/cs/literatura.bib
@@ -43,7 +43,7 @@
 }
 
 @misc{AngularDocs,
-	title = {{D}okumentace frameworku {A}ngulat},
+	title = {{D}okumentace frameworku {A}ngular},
 	howpublished = {\url{https://angular.io/docs}},
 	note = "[Online; citováno 14.7.2021]"
 }
