list of abbreviations added

--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -211,6 +211,18 @@ Abstract.
 %%% U matematických prací může být lepší přemístit seznam zkratek na začátek práce.
 \chapwithtoc{Seznam použitých zkratek}
 
+HTTP
+API
+IL
+ORM
+IoC
+CLR
+OOP
+HTML
+CSS
+CI
+SQL
+
 %%% Přílohy k bakalářské práci, existují-li. Každá příloha musí být alespoň jednou
 %%% odkazována z vlastního textu práce. Přílohy se číslují.
 %%%
