list of abbreviations added

--- a/doc/cs/kap01.tex
+++ b/doc/cs/kap01.tex
@@ -9,7 +9,7 @@ V této kapitole se nachází popis technologií, použitých při vývoji aplik
 \subsection{Jazyk C\#}
 C\# je objektově orientovaný, staticky typovaný programovací jazyk, vyvinutý firmou Microsoft.
 C\# podporuje koncepty zapouzdření, dědičnosti a polymorfismu. Programy v jazyce C\# běží na platformě .NET. 
-Při kompilaci C\# programu je zdrojový kód nejprve zkompilován do mezikódu zvaného IL. 
+Při kompilaci C\# programu je zdrojový kód nejprve zkompilován do mezikódu zvaného CIL. 
 Po spuštění programu pak modul CLR, který je součástí platformy .NET, provede JIT (just-in-time) kompilaci IL kódu do strojových instrukcí počítače.
 Jazyk C\# lze využít k tvorbě konzolových aplikací, webových aplikací a stránek, formulářových aplikací ve Windows, softwaru pro mobilní zařízení, apod. 
 \cite{CSharpDocs}
