--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -211,17 +211,20 @@ Abstract.
 %%% U matematických prací může být lepší přemístit seznam zkratek na začátek práce.
 \chapwithtoc{Seznam použitých zkratek}
 
-HTTP
-API
-IL
-ORM
-IoC
-CLR
-OOP
-HTML
-CSS
-CI
-SQL
+\begin{itemize}
+	\item HTTP -- Hypertext Transfer Protocol
+	\item API -- Application Programming Interface
+	\item CIL -- Common Intermediate Language
+	\item ORM -- Objektově relační mapování
+	\item IoC -- Inversion of control
+	\item CLR -- Common Language Runtime
+	\item OOP -- Objektově orientované programování
+	\item HTML -- HyperText Markup Language 
+	\item CSS -- Cascading Style Sheets
+	\item CI -- Continuous integration
+	\item SQL -- Structured Query Language
+	
+\end{itemize}
 
 %%% Přílohy k bakalářské práci, existují-li. Každá příloha musí být alespoň jednou
 %%% odkazována z vlastního textu práce. Přílohy se číslují.
